<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/YEIC"
        style="@style/TitleStyle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="2dp"
        android:text="@string/Username" />

    <EditText
        android:id="@+id/loginUsername"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxLength="20"
        android:background="@drawable/edittextstyle">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/loginUsername"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="2dp"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:maxLength="25"
        android:background="@drawable/edittextstyle" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" 
        android:text="@string/SignUp"
        style="@style/ButtonTextStyle"
               android:background="@drawable/buttonclickdrawable" />

    <CheckBox
        android:id="@+id/rememberMeCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_alignLeft="@+id/loginPassword"
        android:text="@string/Remember_Me"
        android:padding="5dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forgotPassword"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/Chef"
        android:src="@drawable/yeiclogotransparent3" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpButton"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/loginPassword"
        android:layout_below="@+id/loginPassword"
        android:background="@drawable/buttonclickdrawable"
        android:padding="5dp"
        android:text="@string/LoginButton"
        style="@style/ButtonTextStyle" />

</RelativeLayout>
