<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chefViewLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp" >

        <TextView
            android:id="@+id/chefViewtextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chef"
            android:textAppearance="?android:attr/textAppearanceLarge"
            style="@style/SubTitleStyle" />

    </LinearLayout>

   <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" 
        android:orientation="vertical"
         >
       <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/chefViewtextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/chefTextViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittextstyle" />

    </TableRow> 
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"  >

        <TextView
            android:id="@+id/chefViewtextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password" />

        <TextView
            android:textStyle="bold"
            android:inputType="textPassword"
            android:id="@+id/chefTextViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="1"
            android:background="@drawable/edittextstyle"/>

    </TableRow>



    <TableRow
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"  >

        <TextView
            android:id="@+id/chefViewtextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/chefTextViewName"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"/>

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"  >

        <TextView
            android:id="@+id/chefViewtextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Surname" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/chefTextViewSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittextstyle" />

    </TableRow>
    <TableRow
     android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"  >

        <TextView
            android:id="@+id/chefViewtextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/chefTextViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittextstyle" />

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"  >

        <TextView
            android:id="@+id/chefViewtextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/chefTextViewEmail"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle" />

    </TableRow>

    </TableLayout>



</LinearLayout>
