<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chefLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp" >

    


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >
       <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp" >

        <TextView
            android:id="@+id/cheftextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username" />

        <EditText
            android:id="@+id/chefUsername"
            android:maxLength="12"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/edittextstyle"
            >
            <requestFocus />
        </EditText>
    </TableRow> 
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp" >

        <TextView
            android:id="@+id/cheftextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/chefPassword1"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="20" 
            android:background="@drawable/edittextstyle"/>

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp" >

        <TextView
            android:id="@+id/cheftextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/chefName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:background="@drawable/edittextstyle" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp" >

        <TextView
            android:id="@+id/cheftextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Surname" />

        <EditText
            android:id="@+id/chefSurname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:background="@drawable/edittextstyle" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp" >

        <TextView
            android:id="@+id/cheftextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone" />

        <EditText
            android:id="@+id/chefPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="phone"
            android:maxLength="11"
            android:background="@drawable/edittextstyle"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp" >

        <TextView
            android:id="@+id/cheftextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/chefEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittextstyle"/>

    </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/chefButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonclickdrawable"
            style="@style/ButtonTextStyle" />

    </LinearLayout>

</LinearLayout>
