<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddItemActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Item_name" />

        <EditText
            android:id="@+id/editTextItemName"
            android:inputType="text"
            android:maxLength="20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create_NewItem"
        style="@style/ButtonTextStyle"
        android:background="@drawable/buttonclickdrawable" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonAddItem"
        android:layout_below="@+id/linearLayout1"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

       

        <RelativeLayout android:layout_width="wrap_content"
            android:layout_height="match_parent">

             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:text="@string/Description" />

        </RelativeLayout>
        

        <RelativeLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">

             <EditText
                 android:id="@+id/editTextItemDescription"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_weight="1"
                 android:background="@drawable/edittextstyle"
                 android:inputType="text|textMultiLine"
                 android:maxLength="300"
                 android:maxLines="10"
                 android:minLines="2"
                 android:overScrollMode="always"
                 android:scrollbarStyle="insideInset"
                 android:scrollbars="vertical" />

        </RelativeLayout>
       

    </LinearLayout>

</RelativeLayout>